// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.js - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

const foo = /*css*/\`a{}\`;

md\`\`

graphql(\`{id}\`)

html\`<a>\`

const bar = /*html*/\`<a>\`;

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`a { }\`;

const foo = /*css*/ \`a{}\`;

md\`\`;

graphql(\`{id}\`);

html\`<a>\`;

const bar = /*html*/ \`<a>\`;

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`],
})
class TestComponent {}

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

const foo = /*css*/\`a{}\`;

md\`\`

graphql(\`{id}\`)

html\`<a>\`

const bar = /*html*/\`<a>\`;

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`
  a {
  }
\`;

const foo = /*css*/ \`
  a {
  }
\`;

md\`

\`;

graphql(
  \`
    {
      id
    }
  \`
);

html\`<a></a>\`;

const bar = /*html*/ \`<a></a>\`;

@Component({
  template: \`<a></a>\`,
  styles: [
    \`
      a {
      }
    \`,
  ],
})
class TestComponent {}

================================================================================
`;
